# bsys

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  gen.bzl  meson.build  oos.scons  requirements.txt  wscript
gtest-simple/bazel/: BUILD  WORKSPACE
gtest-simple/cmake/: CMakeLists.txt  a.out
gtest-simple/include/: square_plus_one.hpp
gtest-simple/meson/: meson.build
gtest-simple/scons/: SConstruct  build.scons
gtest-simple/src/: main.cpp
gtest-simple/tests/: test_square_plus_one.cpp
gtest-simple/waf/: README.md  waf  wscript
pygen-simple/: test_hello.sh
pygen-simple/bazel/: test_hello.sh
pygen-simple/include/: bsys.hpp
pygen-simple/manual/: manual.sh
pygen-simple/meson/: meson.build
pygen-simple/scons/: SConstruct
pygen-simple/src/: main.cpp
pygen-simple/waf/: wscript
